# test-argo-fix

./: .argocdignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  generation_log.json  pyproject.toml  validation_results.json
.github/workflows/: ci.yml
docs/: api.md  deployment.md
k8s/: argocd-production.yaml  deployment-patch.yaml  deployment.yaml  ingress-patch.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
k8s/base/: configmap.yaml  kustomization.yaml  secret.yaml
k8s/production/: deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml
scripts/: init_db.py  redis_env.py  run_dev.py
src/: app_runner.py
src/test_argo_fix/: __init__.py  main.py
src/test_argo_fix/api/: __init__.py  auth.py  deps.py  schemas.py  users.py
src/test_argo_fix/core/: config.py  database.py  logging.py
src/test_argo_fix/models/: __init__.py  user.py
src/test_argo_fix/services/: __init__.py  user_service.py
src/test_argo_fix/utils/: security.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py
